--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>LSP Creator</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+
 LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)<br>
 --- Synt Parameters -------------------------------------------------------------------------------<br>
