--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+        <style>
+            .line {
+               border-bottom: 1px solid #f00; /* Параметры линии */
+            }
+        </style>
     </head>
 <body>
 LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)<br>
---- Synt Parameters -------------------------------------------------------------------------------<br>
-      <form action="index.html" method="post">
+<p>Synt Parameters</p>
+<div class="line"></div>
+
+    <form action="index.html" method="post">
         
           <label for="name">Name</label>
           <input type="text" id="name" name="student_name">
