--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)<br>
 <p>Synt Parameters</p>
-<div class="line"></div>
+<div class="line" id="Synt Parameters"></div>
 
     <form action="index.html" method="post">
         
