--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
                border-bottom: 1px solid #f00; /* Параметры линии */
             }
         </style>
+        <style>
+            .header {
+            color: white;
+            background: black;
+            }
+        </style>
     </head>
 <body>
-LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)<br>
+    <span class="header">
+    LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)
+    </span>
+    <br>
 <p>Synt Parameters</p>
 <div class="line" id="Synt Parameters"></div>
 
