--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </span>
     <br>
 <p>Synt Parameters</p>
-<div class="line" id="Synt Parameters"></div>
+<div class="line"></div>
 
     <form action="index.html" method="post">
         
