--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
             background: black;
             }
         </style>
+        <script>
+            var network= 'Ethereum Mainnet'
+            var address = '0x5E667a7720179337679a51d5676ea123BF0fdA1C'
+        </script>
+
     </head>
 <body>
     <span class="header">
-    LSP   Network: [Ethereum Mainnet] Address: [0x15sdjhkhadcdsac2dclkcc254dc153d4v352dcsdc4] (Connect)
+    LSP   Network: network Address: address (Connect)
     </span>
     <br>
 <p>Synt Parameters</p>
