--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
 <body>
     <span class="header">
-    LSP   Network: network Address: address (Connect)
+        <p>LSP   Network: network Address: address (Connect)</p>
     </span>
     <br>
 <p>Synt Parameters</p>
