--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
     <span class="header">
         <p>LSP   Network: network Address: address (Connect)</p>
+        <button type="submit">Connect</button>
     </span>
     <br>
 <p>Synt Parameters</p>
