--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/main.css">
         <style>
             .line {
-               border-bottom: 1px solid #f00; /* Параметры линии */
+               border-bottom: 1px solid #000; /* Параметры линии */
             }
         </style>
         <style>
@@ -27,8 +27,8 @@
 <body>
     <span class="header">
         <p>LSP   Network: network Address: address (Connect)</p>
-        <button type="submit">Connect</button>
     </span>
+    <button type="submit">Connect</button>
     <br>
 <p>Synt Parameters</p>
 <div class="line"></div>
