--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
     </head>
 <body>
-    <span class="header">
-        <p>LSP   Network:</p> network <p>Address:</p> address
+    <p>
+    <span class="header">LSP   Network: network Address: address
     </span>
     <button type="submit">Connect</button>
+    </p>
     <br>
 <p>Synt Parameters</p>
 <div class="line"></div>
