--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <p>
         <span class="header">LSP      Network: network         Address: address
-        <button type="submit">Connect</button></span>
+        <button type="button" style="horizontal-align: right>Connect</button></span>
     </p>
     <br>
 <p>Synt Parameters</p>
