--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             color: white;
             background: black;
             }
+            .nw_vals {
+            color: white;
+            background: red;
+            }
         </style>
         <script>
             var network= 'Ethereum Mainnet'
@@ -26,12 +30,16 @@
     </head>
 <body>
     <p>
-        <span class="header">LSP      Network: network         Address: address
+        <span class="header">LSP      
+            Network: 
+            <span class="nw_vals">network</span>         
+            Address: 
+            <span class="nw_vals">address</span>
         <button type="button" style="horizontal-align: right>Connect</button></span>
     </p>
-    <br>
-<p>Synt Parameters</p>
-<div class="line"></div>
+    <br><br>
+<p>Synt Parameters</p><br>
+<div class="line"></div><br>
 
     <form action="index.html" method="post">
         
