--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
     <p><span class="header">LSP
     <script type="text/javascript">    
-            document.write ("Network:"); document.write ('<span class="nw_vals">' + network + "</span>");         
-            document.write ("Address:"); document.write ('<span class="nw_vals">' + user_address + "</span>");
+            document.write ("     Network:"); document.write ('<span class="nw_vals">' + network + "</span>");         
+            document.write ("     Address:"); document.write ('<span class="nw_vals">' + user_address + "     </span>");
     </script>
     <button type="button" onclick="connect_wallet();">Connect</button>
     </span></p><br>
-    <p><span class="header">Synt Parameters</span></p><br>
+    <p content="width=device-width><span class="header">Synt Parameters</span></p><br>
 
     <label for="name">Name</label>
     <input type="text" id="name" name="student_name">
