--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </style>
         <style>
             .header {
+            width: 100%;
             color: white;
             background: black;
             }
