--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <body>
     
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
-    <p align="justify"><span class="header">LSP
+    <p width=100%><span class="header">LSP
     <script type="text/javascript">    
             document.write ("     Network:"); document.write ('<span class="nw_vals">' + network + "</span>");         
             document.write ("     Address:"); document.write ('<span class="nw_vals">' + user_address + "     </span>");
     </script>
-    <button type="button" onclick="connect_wallet(); float: right">Connect</button>
+    <button type="button" onclick="connect_wallet(); float="right">Connect</button>
     </span></p><br>
-    <p align="justify"><span class="header">Synt Parameters</span></p><br>
+    <p width=100%><span class="header">Synt Parameters</span></p><br>
 
     <label for="name">Name</label>
     <input type="text" id="name" name="student_name">
