--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             document.write ("     Network:"); document.write ('<span class="nw_vals">' + network + "</span>");         
             document.write ("     Address:"); document.write ('<span class="nw_vals">' + user_address + "     </span>");
     </script>
-    <button type="button" onclick="connect_wallet(); float="right">Connect</button>
+    <button type="button" onclick="connect_wallet(); align="right">Connect</button>
     </span></p><br>
     <p width="100%"><span class="header">Synt Parameters</span></p><br>
 
