--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
     <table  cellpadding="4">
         <tr align="right" valign="top">
-            <td>LSP</td>
+            <td align="left">LSP</td>
             <td>Network:</td>
-            <td bgcolor="red"><script type="text/javascript">document.write (network);</script></td>
+            <td bgcolor="red" align="left"><script type="text/javascript">document.write (network);</script></td>
             <td>Address:</td>
-            <td bgcolor="red"><script type="text/javascript">document.write (user_address);</script></td>
-            <td><button type="button" onclick="connect_wallet()>Connect</button></td>
+            <td bgcolor="red" align="left"><script type="text/javascript">document.write (user_address);</script></td>
+            <td><button onclick="connect_wallet()>Connect</button></td>
         </tr>
     </table>
 
