--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             <td class="tr_red"><script type="text/javascript">document.write (network);</script></td>
             <td>Address:</td>
             <td class="tr_red"><script type="text/javascript">document.write (user_address);</script></td>
-            <td><button onclick="connect_wallet()>"Connect"</button></td>
+            <td><button onclick="connect_wallet()">Connect</button></td>
         </tr>
     </table>
 
+        
+    <div class="line">Synt Parameters</div>
                 
     <!-- Функции Java Script -->
     <script type="text/javascript">
