--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <tr>
             <td>LSP</td>
             <td>Network:</td>
-            <td class="tr_red"><script type="text/javascript">document.write (network);</script></td>
+            <td class="td_red"><script type="text/javascript">document.write (network);</script></td>
             <td>Address:</td>
-            <td class="tr_red"><script type="text/javascript">document.write (user_address);</script></td>
-            <td><button onclick="connect_wallet()">Connect</button></td>
+            <td class="td_red"><script type="text/javascript">document.write (user_address);</script></td>
+            <td><button onclick="connect_wallet();">Connect</button></td>
         </tr>
     </table>
 
