--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 width: 0;
                 background: red; 
                 text-align: left;
+                white-space: nowrap;
             }
         </style>
         <script>
@@ -62,7 +63,7 @@
     </table>
 
         
-    <p class="lntxt">Synt Parameters</p>
+    <div class="lntxt">Synt Parameters</div>
                 
     <!-- Функции Java Script -->
     <script type="text/javascript">
