--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 vertical-align: center;
                 padding: 0px;
             }
+            .logo {
+                width: 0;
+                text-align: left;
+            }
             .val1 {
                 width: 0;
                 background: red; 
@@ -53,7 +57,7 @@
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
     <table>
         <tr>
-            <td>LSP</td>
+            <td class="logo">LSP</td>
             <td>Network:</td>
             <td class="val1"><script type="text/javascript">document.write (network);</script></td>
             <td>Address:</td>
@@ -63,7 +67,7 @@
     </table>
 
         
-    <div class="lntxt">Synt Parameters</div>
+    <h1 class="lntxt">Synt Parameters</h1>
                 
     <!-- Функции Java Script -->
     <script type="text/javascript">
