--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <!--                                          ПОДКЛЮЧЕНИЕ КОШЕЛЬКА                                        -->
 <!-- **************************************************************************************************** -->
 function connectWallet() {
+    network = "Ethereum Mainnet";    
 }
   
 class MetamaskError extends Error {}
