--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             var network= 'none'
             var user_address = 'none'
             function connectWallet() {
-                network = "Ethereum Mainnet";    
+                network = "Ethereum Mainnet";
+                location.reload();
             }
         </script>
 
