--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
         <script>
-            var network= 'none'
-            var user_address = 'none'
+            const network= 'none'
+            const user_address = 'none'
             function connectWallet() {
                 network = "Ethereum Mainnet";
                 location.reload();
