--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             }
         </style>
         <script>
-            import { ethers } from 'ethers'
+            //import { ethers } from 'ethers'
             
             var network= 'none'
             var user_address = 'none'
