--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 }
                 if (provider) {
                     // инициалзируем web3 provider
-                    web3 = new ethers.providers.Web3Provider(provider, 'any')
+                    //web3 = new ethers.providers.Web3Provider(provider, 'any')
                 }
                 location.reload();
             }
