--- a/index.html
+++ b/index.html
@@ -64,18 +64,22 @@
 <!-------------------------------------------------------------------------------------->            
             function connectWallet () {
                 if (window.ethereum) { // проверяем есть ли кошелек
+                    console.log('Metamask имеется');
                     // сохраняем экземпляр для дальнейшей инициализации web3Provider
                     provider = window.ethereum 
                     window.ethereum.enable().then((accounts) => {
                         user_address = accounts[0];
                     });
                     if (user_address == null) {
+                        console.log('user_address == null');
                         return
                     }
                 } else if (window.web3) {
+                    console.log('Провайдер имеется');
                     provider = window.web3.currentProvider
                 }
                 if (provider) {
+                    console.log('Инициализация провайдера');
                     // инициалзируем web3 provider
                     //web3 = new ethers.providers.Web3Provider(provider, 'any')
                 }
