--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                 if (provider) {
                     console.log('Инициализация провайдера');
                     // инициалзируем web3 provider
-                    //web3 = new ethers.providers.Web3Provider(provider, 'any')
+                    web3 = new ethers.providers.Web3Provider(provider, 'any')
                 }
+                // location.reload();
             }
 
             
