--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 if (provider) {
                     console.log('Инициализация провайдера');
                     // инициалзируем web3 provider
-                    web3 = new ethers.providers.Web3Provider(provider, 'any')
+                    //web3 = new ethers.providers.Web3Provider(provider, 'any')
+                    const networkId = await provider.request({ method: 'net_version' });
                 }
                 // location.reload();
             }
