--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@
                     const networkId = await provider.request({ method: 'net_version' });
                     console.log('networkId=');
                     console.log(networkId);
+                    switch (parseInt(networkId)) {
+                            case "1":
+                                    network = "Ethereum Mainnet";
+                                    break;
+                            case "3":
+                                    network = "Ropsten Testnet";
+                                    break;
+                            case "4":
+                                    network = "Rinkeby Testnet";
+                                    break;
+                            case "5":
+                                    network = "Goerli Testnet";
+                                    break;
+                            case "42":
+                                    network = "Kovan Testnet";
+                                    break;
+                            case "56":
+                                    network = "BSC";
+                                    break;
+                            default:
+                                    network = "Unknown Network";
+                    }
                 }
                 // location.reload();
             }
@@ -135,7 +157,6 @@
         
         
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
-    <script type="text/javascript">checkWallet();</script>
     <table>
         <tr>
             <td class="logo">LSP</td>
