--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
         <tr>
             <td class="logo">LSP</td>
             <td>Network:</td>
-            <td class="val1"><script type="text/javascript">document.write (getNetwork());</script></td>
+            <td class="val1"><script type="text/javascript async">document.write (getNetwork());</script></td>
             <td>Address:</td>
-            <td class="val1"><script type="text/javascript">document.write (getUserAddress());</script></td>
+            <td class="val1"><script type="text/javascript async">document.write (getUserAddress());</script></td>
             <td><button onclick="connectWallet();">Connect</button></td>
         </tr>
     </table>
