--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                 }
             }
             
-            function getNetwork() {
+            async function getNetwork() {
                 console.log('network=');
                 console.log(network);
                 return (network);
             }
                 
-            function getUserAddress() {
+            async function getUserAddress() {
                 console.log('user_address=');
                 console.log(user_address);
                 return (user_address);
