--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <!-- ************************************************************************* -->    
         <script>
             
-            var network= 'none 1'
-            var user_address = 'none 2'
+            let network= 'none 1'
+            let user_address = 'none 2'
             let web3 = null
             let provider = null
 
