--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     provider = window.ethereum 
                     window.ethereum.enable().then((accounts) => {
                         user_address = accounts[0];
+                        localStorage.setItem("user_address",user_address);
                     });
                     if (user_address == null) {
                         return
@@ -103,6 +104,7 @@
                             default:
                                     network = "Unknown Network";
                     }
+                    localStorage.setItem("network",network);
                 }
                 location.reload();
             }
@@ -140,12 +142,14 @@
             }
             
             function getNetwork() {
+                network = localStorage.getItem("network");
                 console.log('network=');
                 console.log(network);
                 return (network);
             }
                 
             function getUserAddress() {
+                user_address = localStorage.getItem("user_address");
                 console.log('user_address=');
                 console.log(user_address);
                 return (user_address);
