--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     // инициалзируем web3 provider
                     //web3 = new ethers.providers.Web3Provider(provider, 'any')
                     const networkId = await provider.request({ method: 'net_version' });
-                    //console.log('networkId=');
-                    //console.log(networkId);
+                    console.log('networkId=');
+                    console.log(networkId);
                     switch (parseInt(networkId)) {
                             case "1":
                                     network = "Ethereum Mainnet";
