--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
     <h2 class="lntxt">Synt Parameters</h2>
     <hr />
     <p>Name:&nbsp;<input maxlength="25" name="Name" required="required" size="25" type="text" /></p>
-            
+
+    <!-- Параметры оракула -->    
+    <h2 class="lntxt">OO Parameters</h2>
+    <hr />
+
+    <!-- Деплой синтетика -->    
+    <h2 class="lntxt">Create</h2>
+    <hr />
+
     </body>
 </html>
