--- a/index.html
+++ b/index.html
@@ -176,8 +176,57 @@
     <!-- Параметры синтетика -->    
     <h2 class="lntxt">Synt Parameters</h2>
     <hr />
-    <p>Name:&nbsp;<input maxlength="25" name="Name" required="required" size="25" type="text" /></p>
+<table border="1" cellpadding="1" cellspacing="1" style="width:500px">
+	<tbody>
+		<tr>
+			<td>
+			<p>Name of the long short pair contract</p>
 
+			<p><input maxlength="25" name="pairName" required="required" size="25" type="text" /></p>
+			</td>
+			<td>
+			<p>Synth Symbol (4 chars)</p>
+
+			<p><input maxlength="4" name="syntSymbol" required="required" size="25" type="text" /></p>
+			</td>
+			<td>
+			<p>Name of registered price identifier</p>
+
+			<p><input maxlength="25" name="priceID" required="required" size="25" type="text" /></p>
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
+			<td>
+			<p>Expiration timestamp (Unix format)</p>
+
+			<p><input maxlength="25" name="expirationTimestamp" required="required" size="25" type="text" /></p>
+
+			<p>Payout logic contract</p>
+
+			<p><select name="financialProductLibrary" required="required" size="4"><option value="1">Linear LSP</option><option value="2">Covered call LSP</option></select><select name="financialProductLibrary" size="4"></select><select name="financialProductLibrary" size="4"><option value="3">Floored linear LSP</option></select><select size="4"><option value="4">Binary options LSP</option></select></p>
+			</td>
+		</tr>
+		<tr>
+			<td>
+			<p>Address of collateral token contract&nbsp; &nbsp;&nbsp;</p>
+
+			<p><input maxlength="25" name="collateralToken" required="required" size="25" type="text" /></p>
+			</td>
+			<td>
+			<p>Collateral requirements to mint one pair of synthetics tokens</p>
+
+			<p><input maxlength="25" name="collaterlPerPair" required="required" size="25" type="text" /></p>
+			</td>
+			<td>&nbsp;</td>
+		</tr>
+	</tbody>
+</table>
+
+<p>&nbsp;</p>
+        
+        
     <!-- Параметры оракула -->    
     <h2 class="lntxt">OO Parameters</h2>
     <hr />
