--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- Параметры синтетика -->    
     <h2 class="lntxt">Synt Parameters</h2>
     <hr />
-<table border="1" cellpadding="1" cellspacing="1" style="width:500px">
+<table bgcolor="#ffffff" border="1" cellpadding="1" cellspacing="1" style="width:1000px">
 	<tbody>
 		<tr>
 			<td>
