--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             }
             .lntxt:before {margin-left:-100%}
             .lntxt:after {margin-right:-100%}
-            table {
+            .status1 {
                 width: 100%;
                 color: white;
                 background: black;
                 border-spacing: 0px;
                 padding: 0px;
             }
-            tr {
+            .status2 {
                 text-align: right;
                 vertical-align: center;
                 padding: 0px;
@@ -161,8 +161,8 @@
         
         
     <!-- Строка состояния показывает наименование сети, адрес подключенного кошелька и кнопку подключения кошелька -->    
-    <table>
-        <tr>
+    <table class="status1">
+        <tr class="status2">
             <td class="logo">LSP</td>
             <td>Network:</td>
             <td class="val1"><script type="text/javascript">document.write (getNetwork());</script></td>
