--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- Параметры синтетика -->    
     <h2 class="lntxt">Synt Parameters</h2>
     <hr />
-<table bgcolor="#ffffff" border="1" cellpadding="1" cellspacing="1" style="width:1000px">
+<table bgcolor="#ffffff" border="0" cellpadding="1" cellspacing="1" style="width:1000px">
 	<tbody>
 		<tr>
 			<td>
@@ -205,7 +205,11 @@
 
 			<p>Payout logic contract</p>
 
-			<p><select name="financialProductLibrary" required="required" size="4"><option value="1">Linear LSP</option><option value="2">Covered call LSP</option></select><select name="financialProductLibrary" size="4"></select><select name="financialProductLibrary" size="4"><option value="3">Floored linear LSP</option></select><select size="4"><option value="4">Binary options LSP</option></select></p>
+			<p><select name="financialProductLibrary" required="required" size="4">
+				<option value="1">Linear LSP</option>
+				<option value="2">Covered call LSP</option></select>
+				<option value="3">Floored linear LSP</option>
+				<option value="4">Binary options LSP</option></select></p>
 			</td>
 		</tr>
 		<tr>
