--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 			<p><select name="financialProductLibrary" required="required" size="4">
 				<option value="1">Linear LSP</option>
-				<option value="2">Covered call LSP</option></select>
+				<option value="2">Covered call LSP</option>
 				<option value="3">Floored linear LSP</option>
 				<option value="4">Binary options LSP</option></select></p>
 			</td>
