--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- Параметры синтетика -->    
     <h2 class="lntxt">Synt Parameters</h2>
     <hr />
-<table bgcolor="#ffffff" border="0" cellpadding="1" cellspacing="1" style="width:1000px">
+<table bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" style="width:1000px">
 	<tbody>
 		<tr>
 			<td>
@@ -205,7 +205,7 @@
 
 			<p>Payout logic contract</p>
 
-			<p><select name="financialProductLibrary" required="required" size="4">
+			<p><select name="financialProductLibrary" required="required">
 				<option value="1">Linear LSP</option>
 				<option value="2">Covered call LSP</option>
 				<option value="3">Floored linear LSP</option>
